added result pages css with some missing design need to generate result with javascript

--- a/result.html
+++ b/result.html
@@ -23,6 +23,121 @@
 				</div>
 			</div>
 		</div>
+		<div class="zci-wrap">
+			<div class="zci  zci--about is-active">
+				<div class="cw has-aux">
+					<div class="zci__main  zci__main--info">
+						<div class="zci__img-wrap  zci__img-wrap--logo">
+							<a href="https://en.wikipedia.org/wiki/DuckDuckGo"
+								class="zci__img-wrap__in"><img
+								class="zci__img  js-sized-img"
+								src="https://duckduckgo.com/i/9129e7ed.png"
+								style="width: auto; height: auto;"></a>
+						</div>
+						<div class="zci__body  zci__body--info">
+							<h1 class="zci__header  ">
+								<a href="https://en.wikipedia.org/wiki/DuckDuckGo"
+									title="DuckDuckGo">DuckDuckGo</a>
+							</h1>
+							<div class="zci__content zci__content--info chomp js-ellipsis">DuckDuckGo
+								is a Internet search engine that emphasizes protecting
+								searchers' privacy and avoiding the filter bubble of
+								personalized search results. DuckDuckGo distinguishes itself
+								from other search engines 
+							</div>
+							<div class="zci__links  zci__links--info">
+								<a class="chomp--link  sep--after  js-chomp-link can-expand"><i
+									class="chomp--link__icn"></i> <span class="chomp--link__mr">Show
+										More</span><span class="chomp--link__ls">Show Less</span></a><a
+									href="https://en.wikipedia.org/wiki/DuckDuckGo"
+									class="zci__more-at--info"><img width="16" height="16"
+									class="zci__more-at__icon"
+									src="images/wikipedia.png">More at
+									Wikipedia </a><a class="zci__more-at--info"
+									href="https://duckduckgo.com/"><span
+									class="sep  zci__links__sep"></span> duckduckgo.com</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="zci__aux">
+						<div class="tile  tile--info  js-infobox-tile">
+							<div class="info">
+								<span class="info__label">Slogan</span><span class="info__value">The
+									search engine that doesn't track you.</span>
+							</div>
+							<div class="info">
+								<span class="info__label">Type of site</span><span
+									class="info__value">search engine</span>
+							</div>
+							<div class="info">
+								<span class="info__label">Owner</span><span class="info__value">DuckDuckGo,
+									Inc.</span>
+							</div>
+							<div class="info">
+								<span class="info__label">Created by</span><span
+									class="info__value">Gabriel Weinberg</span>
+							</div>
+							<div class="info">
+								<span class="info__label">Launched</span><span
+									class="info__value">September 25, 2008</span>
+							</div>
+							<div class="info">
+								<span class="info__label">Alexa rank</span><span
+									class="info__value">781 (March 1, 2015)</span>
+							</div>
+							<div class="tile__expand  tile--info__expand   js-tile-expand"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="content-wrap">
+			<div class="cw">
+				<div class="results-wrapper">
+					<div class="results full-urls">
+						<div id="r1-1" class="result results_links_deep highlight_d"
+							data-nir="1">
+							<div class="result__body links_main links_deep">
+								<h2 class="result__title">
+									<a class="result__a"
+										href="https://en.wikipedia.org/wiki/DuckDuckGo"><b>DuckDuckGo</b>
+										- Wikipedia, the free encyclopedia</a><a class="result__check"
+										href="https://en.wikipedia.org/wiki/DuckDuckGo"><span
+										class="result__check__tt">Your browser indicates if
+											you've visited this link</span></a>
+								</h2>
+								<div class="result__snippet">
+									<b>DuckDuckGo</b> (DDG) is a Internet search engine that
+									emphasizes protecting searchers' privacy and avoiding the
+									filter bubble of personalized search results. <b>DuckDuckGo</b>
+									distinguishes itself from other search engines by not profiling
+									its users and by deliberately showing all users the same ...
+								</div>
+								<div class="result__extras">
+									<div class="result__extras__url">
+										<span class="result__icon"><a
+											href="/?q=duckduckgo+site:en.wikipedia.org"
+											title="Search domain en.wikipedia.org"><img
+												title="Search domain en.wikipedia.org" id="i101" height="16"
+												width="16" class="result__icon__img"
+												src="images/wikipedia.png"></a></span><a
+											class="result__url"
+											href="https://en.wikipedia.org/wiki/DuckDuckGo"><span
+											class="result__url__domain">en.wikipedia.org</span><span
+											class="result__url__full">/wiki/DuckDuckGo</span></a>
+									</div>
+									<a href="/?q=duckduckgo+site:en.wikipedia.org"
+										title="Search domain en.wikipedia.org" class="result__menu">More
+										results</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
