added api query by javascript ,parser yet to write

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 				<div class="cw--c">
 					<div class="logo-wrap--home">
 						<a id="logo_homepage_link" class="logo_homepage"
-							title="About DuckDuckGo" href="/about">About DuckDuckGo</a>
+							title="About DuckDuckGo" href="">About DuckDuckGo</a>
 					</div>
 					<div class="search-wrap--home">
-						<form class="search--home  js-search-form search--adv search--focus">
+						<form class="search--home  js-search-form search--adv search--focus" action="">
 							<input id="search_form_input_homepage" class="js-search-input search__input--adv" type="text" autocomplete="off" name="q" tabindex="1" value="" autocapitalize="off" autocorrect="off">
 							<input id="search_button_homepage" class="search__button  js-search-button" type="submit" tabindex="2" value="S">
 						</form>
@@ -105,17 +105,16 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>
+
 	$(document).ready(function(){
-		$.ajax({
-		      type: 'GET',
-		      url: 'https://api.duckduckgo.com/',
-		      data: { q: "duckduckgo", format: 'json', pretty: 1 },
-		      jsonpCallback: 'jsonp',
-		      dataType: 'jsonp'
-		    }).then(function (data) {
-		    	console.log(data)
-		      console.log(data.RelatedTopics);
-		    });
+		main.init();
+		$('.search--home').submit(function() {
+			event.preventDefault();
+			 var b = $("#search_form_input_homepage").val();
+			 console.log(b);
+		      var url = 'result.html?query=' + encodeURIComponent(b);
+		    document.location.href = url;
+		})
 	})
 </script>
 </body>
