added transition for header text div

--- a/result.html
+++ b/result.html
@@ -126,6 +126,7 @@
 	</div>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/result.js"></script>
+	<script type="text/javascript" src="js/resultEvenHandler.js"></script>
 	<script>
 	 function formSubmit(query){
 	    	$.ajax({
